# document-manager

./: README.md  index.html  package-lock.json  package.json
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  commands.rs  lib.rs  main.rs  models.rs  storage.rs  thumbnail.rs
src-tauri/src-tauri/icons/: icon.icns
src/components/: BinderCard.tsx  BinderList.tsx  BinderModal.tsx  BulkActionBar.tsx  ConfirmModal.tsx  DocumentCard.tsx  DocumentDetail.tsx  EditDocumentModal.tsx  Navbar.tsx  PreviewPane.tsx  SearchBar.tsx  SettingsModal.tsx  Sidebar.tsx  SortControls.tsx
src/data/: mockDocuments.ts
src/hooks/: useAppState.ts
src/lib/: tauriCommands.ts
src/utils/: assetUrl.ts  binderUtils.ts  tagColors.ts
