[package]
name = "document-manager"
version = "0.1.0"
description = "A Tauri Document Manager App"
authors = ["you"]
edition = "2021"

[lib]
name = "document_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
